--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h3 class="sub-titulo">Sobre eu &#x1F643</h3>
 
                     <div class="descricao">
-                        <p>Oi! meu nome é Bruno Oliveira, seja bem-vindo(a) ao meu mini portfolio!</p><br>
+                        <p>Oi! Meu nome é Bruno Oliveira, seja bem-vindo(a) ao meu mini portfolio!</p><br>
             
                           <p>
                             Sou uma pessoa que gosta de programação desde os 16 anos. Tenho o sonho de trabalhar com programação e comecei a colocar esse sonho em prática estudando tecnologias como  <span>HTML, CSS e JavaScript</span>. Meus principais hobbies são jogar video game e ver futebol.
