--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <main class="cartao">
         <div class="minhas-informacoes">
-            <img src="src/imagens/foto-perfil.jpg" alt="foto de perfil">
+            <img src="src/imagens/foto-perfil.jpeg" alt="foto de perfil">
             <h1 class="nome">Bruno Oliveira</h1>
             <h2 class="cargo">Desenvolvedor Frontend Júnior</h2>
         </div>
@@ -35,13 +35,12 @@
 
             <div class="informacoes-abas">
                 <div class="informacao selecionado" id="informacao-sobre-mim"> 
-                    <h3 class="sub-titulo">Sobre eu &#x1F643</h3>
+                    <h3 class="sub-titulo">Sobre mim &#x1F643</h3>
 
                     <div class="descricao">
-                        <p>Oi! Meu nome é Bruno Oliveira, seja bem-vindo(a) ao meu mini portfolio!</p><br>
-            
+                        <p>Olá! Sou o <span class="nome-texto">Bruno Oliveira</span>, seja bem-vindo(a) ao meu mini portfólio!</p><br>
                           <p>
-                            Sou uma pessoa que gosta de programação desde os 16 anos. Tenho o sonho de trabalhar com programação e comecei a colocar esse sonho em prática estudando tecnologias como  <span>HTML, CSS e JavaScript</span>. Meus principais hobbies são jogar video game e ver futebol.
+                            Gosto de programação desde os 16 anos. Tenho o sonho de trabalhar com programação e comecei a colocar esse sonho em prática estudando tecnologias como  <span class="linguagens">HTML, CSS e JavaScript</span>. Meus principais hobbies são jogar video game e ver futebol.
                           </p>
                     </div>
                 </div>
@@ -51,10 +50,10 @@
 
                     <ul class="redes-sociais">
                         <li>
-                            <a href="#" target="_blank" class="curriculo">Currículo (em breve)</a>
+                            <a href="src/files/CV_Bruno_Oliveira.pdf" target="_blank" class="curriculo">Currículo</a>
                         </li>
                         <li>
-                            <a href="#" target="_blank" class="linkedin">LinkedIn (em breve)</a>
+                            <a href="https://www.linkedin.com/in/bruno-oliveira-681437278/" target="_blank" class="linkedin">LinkedIn</a>
                         </li>
                         <li>
                             <a href="https://github.com/BrunoOlv10" target="_blank" class="github">GitHub</a>
